fix: modal visible and title color

--- a/client/src/pages/home/lottery/widgets/Energy/energy.less
+++ b/client/src/pages/home/lottery/widgets/Energy/energy.less
@@ -41,6 +41,10 @@
     .content {
       font-size: 18px;
       padding: 0px 5px;
+      color: #c95f3f;
+      background: -webkit-linear-gradient(#c95f3f, #9c381a);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     .line_left,
